@@ -1,3 +1,4 @@
+7-30-2010: Changed color of total force from pink to dark green, see #2452
 7-29-2010: Added colors from PhET's color scheme based on the google spreadsheet
 7-21-2010: Introduced Observable<T> class with MutableBoolean convenience subclass.
 6-14-2010: Minor documentation change in Arrow
